# Hackathon

./: Dockerfile  README.md  pyproject.toml
api/: Dockerfile  main.py  predict.py  pyproject.toml  train.py
notebook/: model.pkl
notebooks/: model.pkl  predict.ipynb  train.ipynb
