[tool.poetry]
name = "hackathon"
version = "0.1.0"
description = ""
authors = ["mariasilvia"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"
joblib = "^1.4.2"
streamlit = "^1.44.1"
gradio = "^5.25.0"
uvicorn = {extras = ["standard"], version = "^0.27.1"}

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
