[tool.poetry]
name = "mushroom-api"
version = "0.1.0"
description = "mushroom prediction"
authors = ["saraperi"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
fastapi = "^0.110.0"
uvicorn = { extras = ["standard"], version = "^0.27.1" }
pandas = "^2.2.3"
scikit-learn = "^1.6.1"
joblib = "^1.4.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"